# Change Log
[Chili Bullet Weapons](https://iunius118.github.io/ChiliBulletWeapons/).
[Source](https://github.com/Iunius118/ChiliBulletWeapons).

## [Unreleased]

## [1.5.0]
- Require Minecraft 1.20.4 and NeoForge 20.4.200+.

### Added
- String of curved Chili peppers.
- Dried curved chili pepper.
- Hot chili sauce.
- Barrel of hot chili sauce.

### Changed
- Sack of curved chili peppers is now storage item for dried curved chili peppers.
- Dried curved chili pepper can be used as ingredient in food in place of curved chili pepper.
- Hot chili sauce can be used as ingredient in sandwiches in place of curved chili pepper.
- Maximum value of `chiliArrowDamageMultiplier` is now 8.

### Fixed
- Issue with chili bullets doing damage when `chiliBulletBaseDamage` is set to 0.

## [1.4.0]
- Require Minecraft 1.20.4 and NeoForge 20.4.200+.

### Added
- Add configuration file to adjust performance of weapons.

## [1.3.0]
- Require Minecraft 1.20.4 and NeoForge 20.4.200+.

### Added
- Bullet chili arrow. This item causes a small explosion, dealing explosive damage to nearby entities.

### Changed
- Add group values to recipes.

## [1.2.1]
- Require Minecraft 1.20.4 and NeoForge 20.4.200+.

### Added
- Add item descriptions to tooltips of gun upgrade items.

### Changed
- Order of weapon items in creative mode tab.

### Fixed
- Rendering of fired chili bullets.

## [1.2.0]
- Require Minecraft 1.20.4 and NeoForge 20.4.200+.

### Added
- Items for compact storage of chili peppers: `Sack of Bullet-like Chili Peppers` and `Sack of Curved Chili Peppers`.
- Pasta olio e peperoncino.
- Gun upgrade system and upgrade items.
  - To upgrade a gun, hold the gun in the off-hand and use (right-click) the upgrade item held in the main hand.

### Changed
- Require NeoForge 20.4.200+.
- Increase composting chance of half-sized chili potato sandwich.

### Removed
- Smithing table recipe for gun with bayonet.

## [1.1.0]
- Require Minecraft 1.20.4 and NeoForge 20.4.80-beta+.

### Added