@@ -12,7 +12,7 @@ loader_version_range=[2,)
 mod_id=chilibulletweapons
 mod_name=Chili Bullet Weapons
 mod_license=MIT License
-mod_version=1.5.0
+mod_version=1.5.1
 mod_group_id=com.github.iunius118.chilibulletweapons
 mod_update_url=
 mod_url=https://github.com/Iunius118/ChiliBulletWeapons
