@@ -1,0 +1,10 @@
+{
+  "required": true,
+  "minVersion": "0.8",
+  "package": "com.github.iunius118.chilibulletweapons.mixin",
+  "compatibilityLevel": "JAVA_17",
+  "mixins": [
+    "MixinCrossbowItem"
+  ],
+  "refmap": "chilibulletweapons.mixins.refmap.json"
+}
