@@ -3,6 +3,8 @@
 [Source](https://github.com/Iunius118/ChiliBulletWeapons).
 
 ## [Unreleased]
+### Fixed
+- Fix to allow non-players to fire chili bullet guns.
 
 ## [1.5.0]
 - Require Minecraft 1.20.4 and NeoForge 20.4.200+.
